# adobe_platform_libraries

./: .clang-format  .gitignore  CMakeLists.txt  apl.sublime-project  build.sh  cmake_build.sh  cmake_build_all.sh  jamroot.jam
adobe/: dictionary_set.hpp  file_slurp.hpp  function_pack.hpp  layout_formatter.hpp  pb_style.hpp  property_model_formatter.hpp  sequence_model.hpp  sequence_mvc_muldex.hpp  sheet_hooks.hpp  xml_element_forest.hpp
adobe/future/: behavior.hpp  drag_and_drop_fwd.hpp  locale.hpp  modal_dialog_interface.hpp  number_formatter.hpp  periodical.hpp
adobe/future/source/: behavior.cpp  locale.cpp  modal_dialog_interface.cpp
adobe/future/widgets/: jamfile.jam
adobe/future/widgets/headers/: button_factory.hpp  checkbox_factory.hpp  control_button.hpp  control_button_factory.hpp  display.hpp  display_number_factory.hpp  edit_number.hpp  edit_number_factory.hpp  edit_text_factory.hpp  factory.hpp  group_factory.hpp  image_factory.hpp  label_factory.hpp  link_factory.hpp  optional_panel_factory.hpp  panel_factory.hpp  popup_common.hpp  popup_factory.hpp  presets_common.hpp  presets_factory.hpp  preview_factory.hpp  progress_bar_factory.hpp  radio_button_factory.hpp  reveal_factory.hpp  separator_factory.hpp  slider_factory.hpp  slider_helper.hpp  sublayout.hpp  tab_group_factory.hpp  toggle_factory.hpp  value_range_format.hpp  widget_factory_registry.hpp  widget_utils.hpp  window_factory.hpp  window_server.hpp
adobe/future/widgets/sources/: button_factory.cpp  default_factory.cpp  display_number_factory.cpp  edit_number.cpp  edit_text_factory.cpp  platform_optional_panel.cpp  presets_common.cpp  toggle_factory.cpp  virtual_machine_extension.cpp  window_server.cpp
adobe/gil/extension/asl_io/: io_factory.hpp  targa.hpp
adobe/implementation/: expression_formatter.hpp
backend/gtk/adobe/future/: platform_file_monitor_impl.hpp  platform_number_formatter_data.hpp  platform_periodical_data.hpp  platform_primitives.hpp
backend/gtk/adobe/future/source/: platform_cursor.cpp  platform_file_monitor_impl.cpp  platform_locale_data.cpp  platform_number_formatter_data.cpp  platform_periodical_data.cpp
backend/gtk/adobe/future/widgets/headers/: platform_button.hpp  platform_checkbox.hpp  platform_display_number.hpp  platform_edit_number.hpp  platform_edit_text.hpp  platform_group.hpp  platform_image.hpp  platform_label.hpp  platform_link.hpp  platform_panel.hpp  platform_popup.hpp  platform_presets.hpp  platform_preview.hpp  platform_progress_bar.hpp  platform_radio_button.hpp  platform_reveal.hpp  platform_separator.hpp  platform_slider.hpp  platform_tab_group.hpp  platform_toggle.hpp  platform_widgets_gtk.hpp  platform_window.hpp
backend/gtk/adobe/future/widgets/sources/: platform_display.cpp  platform_widgets_gtk.cpp
backend/template/adobe/future/widgets/templates/: button.hpp  checkbox.hpp  display_number.hpp  edit_number_data.hpp  edit_text.hpp  group.hpp  image.hpp  label.hpp  link.hpp  panel.hpp  platform_widgets.hpp  popup.hpp  presets.hpp  preview.hpp  progress_bar.hpp  radio_button.hpp  reveal.hpp  slider.hpp  (+5 more)
macintosh/adobe/future/widgets/headers/: platform_progress_bar.hpp
source/: dictionary_set.cpp
test/: CMakeLists.txt
test/begin/: CMakeLists.txt
test/begin/sources/: file.cpp
test/begin/sources/gtk/: config.hpp.in  main.cpp
test/begin/sources/win32/: main.cpp
test/gil_io_factory/: jamfile.jam
test/layout_tidy/: jamfile.jam
test/modal_dialog_interface/: CMakeLists.txt  main.cpp
test/property_model_tidy/: jamfile.jam
windows/adobe/future/: platform_primitives.hpp  windows_graphic_utils.hpp
windows/adobe/future/source/: platform_cursor.cpp  platform_drag_and_drop_data.cpp  platform_file_monitor_impl.cpp  platform_locale_data.cpp  platform_number_formatter_data.cpp  platform_periodical_data.cpp  platform_primitives.cpp
windows/adobe/future/widgets/headers/: platform_button.hpp  platform_checkbox.hpp  platform_display_number.hpp  platform_edit_text.hpp  platform_group.hpp  platform_image.hpp  platform_label.hpp  platform_metrics.hpp  platform_popup.hpp  platform_progress_bar.hpp  platform_radio_button.hpp  platform_reveal.hpp  platform_slider.hpp  platform_tab_group.hpp  platform_toggle.hpp  platform_widget_utils.hpp  platform_window.hpp
windows/adobe/future/widgets/sources/: platform_button.cpp  platform_checkbox.cpp  platform_display.cpp  platform_display_number.cpp  platform_edit_text.cpp  platform_group.cpp  platform_image.cpp  platform_label.cpp  platform_link.cpp  platform_metrics.cpp  platform_panel.cpp  platform_popup.cpp  platform_presets.cpp  platform_preview.cpp  platform_progress_bar.cpp  platform_radio_button.cpp  platform_reveal.cpp  platform_separator.cpp  platform_slider.cpp  platform_tab_group.cpp  platform_toggle.cpp  platform_widget_utils.cpp  platform_window.cpp
